# OpenGL-Base

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TestTexture2D.cpp  TestTexture2D.h
resources/models/Samurai_Helmet/: SamuraiHelmet.mtl  credits.txt
resources/models/lowpoly-steam-locomotive/: Train.mtl  credit.txt
src/: ObjectData.h  SandboxLayer.cpp  SandboxLayer.h  application.cpp  application.h  camera.cpp  camera.h  glPrimitives.h  light.h  lights.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pointlight.h  primitives.cpp  primitives.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  texture3d.cpp  texture3d.h
src/engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  EngineLayer.cpp  EngineLayer.h  ErrorManager.cpp  ErrorManager.h  GLPrimitives.h  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OBJ_Loader.h  ParticleEmitter.cpp  ParticleEmitter.h  application.cpp  application.h  camera.cpp  camera.h  glPrimitives.h  mesh.cpp  mesh.h  model.cpp  model.h
src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/shaders/: PBR.frag  PBR.vert  Particle.frag  Particle.vert  SolidLit.frag  SolidLit.vert  TexturedLit.frag  TexturedUnlit.frag  TexturedUnlit.vert  default.frag  default.vert  light.frag  lit_cube.frag  lit_cube.vert  modelLoading.frag  simpleDepthShader.frag  simpleDepthShader.vert  skybox.vert  texturedLit.frag  texturedLit.vert
src/tests/: Test.cpp  Test.h  Test3DCamera.cpp  Test3DCamera.h  TestClearColor.cpp  TestClearColor.h  TestInstancedRender.cpp  TestInstancedRender.h  TestLighting.cpp  TestLighting.h  TestModelLoading.cpp  TestModelLoading.h  TestPBR.cpp  TestPBR.h  TestParticles.cpp  TestParticles.h  TestScene.cpp  TestScene.h  TestTexture2D.cpp  TestTexture2D.h  TestTextureMapping.cpp  TestTextureMapping.h
